--- a/ModulosHotel/ConfiguracoesGerais.html
+++ b/ModulosHotel/ConfiguracoesGerais.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atendimento Ao CLiente</title>
+    <title>Configurações Gerais</title>
     <style>
         * {
             margin: 0;
@@ -136,8 +136,8 @@
         <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Atendimento ao Clietne</h1>
-            <p class="subtitle">Ferramentas para atendimento ao cliente</p>
+            <h1>Configurações Gerais</h1>
+            <p class="subtitle">Em breve você vai aprender algo top aqui.</p>
         </header>
         
         <div class="grid-container">
@@ -164,7 +164,7 @@
                 <div class="card-body">
                     <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
-                        <a href="../SubmodulosBoasPraticas/ConduçãoAtendimento.html" class="access-button">
+                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
