--- a/ModulosHotel/MapaTarifario.html
+++ b/ModulosHotel/MapaTarifario.html
@@ -133,7 +133,7 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
             <h1>Mapa Tarifário</h1>
@@ -147,7 +147,7 @@
                     <h2 class="card-title">Em Desenvolvimento</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Aprenda a realizar check-in de forma rápida e eficiente, otimizando o processo de recepção de hóspedes.</p>
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                             Clique Aqui
@@ -162,7 +162,7 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Domine as ferramentas de gestão de reservas e otimize a ocupação do seu hotel.</p>
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
@@ -177,52 +177,7 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Controle e visualize o status de todas as unidades habitacionais do hotel.</p>
-                    <div class="card-footer">
-                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
-                           Clique Aqui
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Widget 4 -->
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
-                </div>
-                <div class="card-body">
-                    <p class="card-description">Visualize a ocupação em tempo real de todas as unidades do hotel.</p>
-                    <div class="card-footer">
-                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
-                           Clique Aqui
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Widget 5 -->
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
-                </div>
-                <div class="card-body">
-                    <p class="card-description">Consulte e gerencie as tarifas aplicadas em diferentes períodos.</p>
-                   <div class="card-footer">
-                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
-                           Clique Aqui
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Widget 6 -->
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
-                </div>
-                <div class="card-body">
-                    <p class="card-description">Aprenda a transferir consumos entre unidades e reservas.</p>
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
