--- a/ModulosMotel/Configuracoes.html
+++ b/ModulosMotel/Configuracoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Configurações</title>
+    <title>Configurações Gerais</title>
     <style>
         * {
             margin: 0;
@@ -133,10 +133,10 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Configurações</h1>
+            <h1>Configurações Gerais</h1>
             <p class="subtitle">Ferramentas e utilitários do sistema Bitz Motel</p>
         </header>
         
@@ -177,7 +177,7 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Controle e visualize o status de todas as unidades habitacionais do hotel.</p>
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
