--- a/SubmodulosBoasPraticas/ConduçãoAtendimento.html
+++ b/SubmodulosBoasPraticas/ConduçãoAtendimento.html
@@ -45,7 +45,7 @@
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
     <div class="container mx-auto px-3 sm:px-4 md:px-6">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <!-- Header / Navegação Fixa -->
     <header class="sticky top-0 bg-white shadow-md z-50">
