--- a/SubmodulosBoasPraticas/ControleEmocional.html
+++ b/SubmodulosBoasPraticas/ControleEmocional.html
@@ -62,9 +62,22 @@
             border-top: 2px dashed #ccc;
             margin: 30px 0;
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body>
+    <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <header class="header-section">
         <div class="container">
