--- a/SubmodulosBoasPraticas/ConversasDificeis.html
+++ b/SubmodulosBoasPraticas/ConversasDificeis.html
@@ -19,9 +19,22 @@
             background-color: #B91C1C; /* bg-red-700 */
             color: #FFFFFF; /* text-white */
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
+    <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <!-- Header / Navegação Fixa -->
     <header class="sticky top-0 bg-white shadow-md z-50">
