--- a/SubmodulosMotel/InstalaçãoImperium.html
+++ b/SubmodulosMotel/InstalaçãoImperium.html
@@ -59,10 +59,23 @@
         .code-block .text-yellow-400-alt { color: #2563EB; }
         .code-block .text-green-400-alt { color: #16A34A; }
         .code-block .text-red-300-alt { color: #DC2626; }
+        .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
 
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
+    <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <nav class="bg-white shadow-md">
         <div class="container mx-auto px-4 md:px-6 flex justify-between items-center h-16">
