--- a/SubmodulosMotel/MapeamentoImperium.html
+++ b/SubmodulosMotel/MapeamentoImperium.html
@@ -82,9 +82,23 @@
             border-bottom: 1px solid #444;
             padding-bottom: 3px;
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body>
+    <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../index.html" class="back-button">← Voltar</a>
+
     <div class="container">
         <h1>Tutorial de Mapeamento do Sistema - BITZ Softwares</h1>
 
