--- a/ModuloBoasPraticas/TecnicasAvançadas.html
+++ b/ModuloBoasPraticas/TecnicasAvançadas.html
@@ -133,7 +133,7 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
             <h1>Técnicas Avançadas</h1>
