--- a/ModulosHotel/AcessoRapido.html
+++ b/ModulosHotel/AcessoRapido.html
@@ -133,8 +133,8 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
-
+        <a href="../index.html" class="back-button">← Voltar</a>
+        
         <header>
             <h1>Acesso Rápido</h1>
             <p class="subtitle">Ferramentas e utilitários do sistema Bitz Hotel</p>
