--- a/ModulosHotel/Hospedagens.html
+++ b/ModulosHotel/Hospedagens.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atendimento Ao CLiente</title>
+    <title>Hospedagens</title>
     <style>
         * {
             margin: 0;
@@ -136,18 +136,18 @@
         <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Atendimento ao Clietne</h1>
-            <p class="subtitle">Ferramentas para atendimento ao cliente</p>
+            <h1>Hospedagens</h1>
+            <p class="subtitle">Ferramentas e utilitários do sistema Bitz Hotel</p>
         </header>
         
         <div class="grid-container">
             <!-- Widget 1 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
+                    <h2 class="card-title">Em Desenvolvimento</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <p class="card-description">>Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                             Clique Aqui
@@ -162,9 +162,9 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <p class="card-description">>Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
-                        <a href="../SubmodulosBoasPraticas/ConduçãoAtendimento.html" class="access-button">
+                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
@@ -177,7 +177,7 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <p class="card-description">>Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
