--- a/ModulosMotel/GuiaGo.html
+++ b/ModulosMotel/GuiaGo.html
@@ -133,7 +133,7 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
             <h1>Acesso Rápido</h1>
@@ -147,7 +147,7 @@
                     <h2 class="card-title">Guia GO</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Aprenda a realizar check-in de forma rápida e eficiente, otimizando o processo de recepção de hóspedes.</p>
+                    <p class="card-description">Aprenda a realizar as configurações do Guia de Motéis GO</p>
                     <div class="card-footer">
                         <a href="../SubmodulosMotel/ConfigurandoGuiaGo.html" class="access-button">
                             Clique Aqui
@@ -162,7 +162,7 @@
                     <h2 class="card-title">Em Desenvolvimento...</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Domine as ferramentas de gestão de reservas e otimize a ocupação do seu hotel.</p>
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
