--- a/SubmodulosBoasPraticas/BoasPraticasEscritaChat.html
+++ b/SubmodulosBoasPraticas/BoasPraticasEscritaChat.html
@@ -150,7 +150,7 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <div class="container">
         <header>
