--- a/SubmodulosBoasPraticas/ProcessosPadronizações.html
+++ b/SubmodulosBoasPraticas/ProcessosPadronizações.html
@@ -25,12 +25,22 @@
         .back-button:hover {
             background: #7f8c8d;
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
     <div class="container mx-auto px-3 sm:px-4 md:px-6">
         <!-- Botão Voltar -->
-        <a href="../index1.html" class="back-button">← Voltar</a>
+        <a href="../index.html" class="back-button">← Voltar</a>
 
         <!-- Header / Navegação Fixa -->
         <header class="sticky top-0 bg-white shadow-md z-50 mb-8">
