--- a/SubmodulosHotel/Widgets.html
+++ b/SubmodulosHotel/Widgets.html
@@ -128,7 +128,7 @@
         
         <p>Este módulo estará disponível assim que você fizer um conteudo top e mandar para o seu Líder Analisar.</p>
         
-        <a href="../index1.html" class="back-button">← Voltar para o Portal</a>
+        <a href="../index.html" class="back-button">← Voltar para o Portal</a>
     </div>
 </body>
 </html>
