--- a/SubmodulosMotel/ConfigurandoGuiaGo.html
+++ b/SubmodulosMotel/ConfigurandoGuiaGo.html
@@ -21,9 +21,22 @@
             overflow-x: auto;
             white-space: nowrap;
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
+    <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../index.html" class="back-button">← Voltar</a>
 
     <header class="sticky top-0 bg-white shadow-md z-50">
         <nav class="container mx-auto px-4 md:px-6 py-3 flex justify-between items-center">
