--- a/ModulosHotel/Eventos.html
+++ b/ModulosHotel/Eventos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acesso Rápido</title>
+    <title>Eventos</title>
     <style>
         * {
             margin: 0;
@@ -255,7 +255,7 @@
         <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Acesso Rápido</h1>
+            <h1>Eventos</h1>
             <p class="subtitle">Ferramentas e utilitários do sistema Bitz Hotel</p>
         </header>
 
@@ -273,12 +273,12 @@
             <!-- Tema 1 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
+                    <h2 class="card-title">Como cadastrar um Evento</h2>
                 </div>
                 <div class="card-body">
                     <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
-                        <a href="../ModulosHotel/EmDesenvolvimento.html" class="access-button">
+                        <a href="../SubmodulosHotel/CadastrarEvento.html" class="access-button">
                             Clique Aqui
                         </a>
                     </div>
