--- a/ModulosHotel/PainelUHs.html
+++ b/ModulosHotel/PainelUHs.html
@@ -360,6 +360,8 @@
         
         <div class="grid-container">
             <!-- Seus cards aqui (mantenha todos os cards existentes) -->
+
+            <!-- Tema 1 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Link de Satisfação</h2>
@@ -374,22 +376,7 @@
                 </div>
             </div>
 
-            <!-- Widget 2 -->
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="card-title">Impressão de Extrato de Hospedagens</h2>
-                </div>
-                <div class="card-body">
-                    <p class="card-description">Aqui você aprenderá como imprimir um extrato de hospedagem que já está encerrada</p>
-                    <div class="card-footer">
-                        <a href="../SubmodulosHotel/ImpressãoDeExtratoDaHospedagemJaEncerrada.html" class="access-button">
-                            Clique Aqui
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Widget 3 -->
+            <!-- Tema 2 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Transferir Responsável de Consumo</h2>
@@ -404,7 +391,7 @@
                 </div>
             </div>
 
-            <!-- Tema 4 -->
+            <!-- Tema 3 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Transferir Consumo de Quarto</h2>
@@ -419,7 +406,7 @@
                 </div>
             </div>
 
-            <!-- Tema 5 -->
+            <!-- Tema 4 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Tarifas não Cadastradas</h2>
@@ -434,7 +421,7 @@
                 </div>
             </div>
 
-            <!-- Tema 6 -->
+            <!-- Tema 5 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Excluir itens lançados errados</h2>
@@ -449,7 +436,7 @@
                 </div>
             </div>
 
-            <!-- Tema 7 -->
+            <!-- Tema 6 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Erro de Rateio de Adiantamento nas Reservas</h2>
@@ -464,7 +451,7 @@
                 </div>
             </div>
 
-            <!-- Tema 8 -->
+            <!-- Tema 7 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">UH está indisponível</h2>
@@ -479,7 +466,7 @@
                 </div>
             </div>
 
-            <!-- Tema 9 -->
+            <!-- Tema 8 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Transferir acompanhante de Quarto</h2>
@@ -494,7 +481,7 @@
                 </div>
             </div>
 
-            <!-- Tema 10 -->
+            <!-- Tema 9 -->
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Limpeza em Massa</h2>
@@ -503,6 +490,125 @@
                     <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
                     <div class="card-footer">
                         <a href="../SubmodulosHotel/LimpezaEmMassa.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 10 -->    
+            <div class="card">
+                <div class="card-header">
+                <h2 class="card-title">Corrigir pagamentos Outros</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/CorrigirPagamentoOutros.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 11 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Como Dividir Consumo entre Hóspede e Empresa</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/ComoDividirPagamento.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 12 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Como Verificar Hospedagens Anteriores</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/VerificarHospedagensAnteriores.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 13 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Como Lançar Cortesia</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/LançarCortesia.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 14 -->    
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Excluir Empréstimo de Itens</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/EmprestimodeItem.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 15 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Baixa Parcial de Consumos</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/BaixaParcial.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 16 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Como Alterar o Status do Quarto Limpo</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/AlterarStatus.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Tema 17 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Quarto em Manutenção impossibilitando o Check-in</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste conteúdo você verá como realizar uma limpeza em massa.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/QuartoManutencao.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
@@ -522,58 +628,101 @@
         },
         {
             id: 2,
-            title: "Impressão de Extrato de Hospedagens",
-            description: "Aqui você aprenderá como imprimir um extrato de hospedagem que já está encerrada",
-            link: "../SubmodulosHotel/ImpressãoDeExtratoDaHospedagemJaEncerrada.html"
-        },
-        {
-            id: 3,
             title: "Transferir Responsável de Consumo",
             description: "Neste conteúdo você verá como fazer uma transferência de consumo entre Responsáveis.",
             link: "../SubmodulosHotel/TransferirResponsavelConsumo.html"
         },
         {
-            id: 4,
+            id: 3,
             title: "Transferir Consumo de Quarto",
             description: "Neste conteúdo você verá como fazer uma transferência de consumo entre quartos(UHs).",
             link: "../SubmodulosHotel/TransferenciaConsumosQuartos.html"
         },
         {
-            id: 5,
+            id: 4,
             title: "Tarifas não Cadastradas",
             description: "Neste conteúdo você verá como fazer uma transferência de consumo entre quartos(UHs).",
             link: "../SubmodulosHotel/TarifasCadastradas.html"
         },
         {
-            id: 6,
+            id: 5,
             title: "Excluir itens lançados errados",
             description: "Neste conteúdo você verá como fazer a exclusão de itens lançados errados na UH.",
             link: "../SubmodulosHotel/ExcluirItensLançados.html"
         },
         {
-            id: 7,
+            id: 6,
             title: "Erro de Rateio de Adiantamento nas Reservas",
             description: "Neste conteúdo você verá como corrigir erros de Rateio no adiantamento de Reservas.",
             link: "../SubmodulosHotel/ExcluirItensLançados.html"
         },
         {
-            id: 8,
+            id: 7,
             title: "UH está indisponível",
             description: "Neste conteúdo você verá como corrigir uma UH que esta indisponível no check-in.",
             link: "../SubmodulosHotel/UhIndisponivel.html"
         },
         {
-            id: 9,
+            id: 8,
             title: "Transferir acompanhante de Quarto",
             description: "Neste conteúdo você verá como transferir um acompanhante para outro Quarto.",
             link: "../SubmodulosHotel/TransferirAcompanhante.html"
         },
         {
-            id: 10,
+            id: 9,
             title: "Limpeza em Massa",
             description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
             link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 10,
+            title: "Corrigir pagamentos Outros",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 11,
+            title: "Como Dividir Consumo entre Hóspede e Empresa",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 12,
+            title: "Como Verificar Hospedagens Anteriores",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 13,
+            title: "Como Lançar Cortesia",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 14,
+            title: "Excluir Empréstimo de Itens",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 15,
+            title: "Baixa Parcial de Consumos",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 16,
+            title: "Como Alterar o Status do Quarto Limpo",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
+        },
+        {
+            id: 17,
+            title: "Quarto em Manutenção impossibilitando o Check-in",
+            description: "Neste conteúdo você verá como realizar uma limpeza em massa.",
+            link: "../SubmodulosHotel/LimpezaEmMassa.html"
         }
+    
     ];
 
     // Variável para controlar os cards originais
