--- a/ModulosHotel/Cadastros.html
+++ b/ModulosHotel/Cadastros.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pensão</title>
+    <title>Cadastros</title>
     <link rel="icon" href="../logo.png" type="image/x-icon">
-    
+
     <style>
         * {
             margin: 0;
@@ -257,7 +257,7 @@
         <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Pensão</h1>
+            <h1>Cadastros</h1>
             <p class="subtitle">Ferramentas e utilitários do sistema Bitz Hotel</p>
         </header>
 
@@ -271,45 +271,76 @@
         </div>
         
         <div class="grid-container">
-            <!-- Widget 1 -->
+             <div class="grid-container">
+            <!-- Tema 1 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Como confirmar que o hóspede Tomou Café da Manhã</h2>
+                    <h2 class="card-title">Alterar senha de exclusão</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Aprenda como marcar a confirmação do hóspede na Pensão.</p>
+                    <p class="card-description">Neste Conteúdo, você verá como alterar a senha para exclusão.</p>
                     <div class="card-footer">
-                        <a href="../SubmodulosHotel/ComoMarcarPensão.html" class="access-button">
+                        <a href="../SubmodulosHotel/AlterarSenhaExclusão.html" class="access-button">
                             Clique Aqui
                         </a>
                     </div>
                 </div>
             </div>
 
-            <!-- Widget 2 -->
+            <!-- Tema 2 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
+                    <h2 class="card-title">Parâmetros Financeiros</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <p class="card-description">Neste Conteúdo, você verá sobre os parâmetros financeiros.</p>
                     <div class="card-footer">
-                        <a href="../ModulosHotel/EmDesenvolvimento.html" class="access-button">
+                        <a href="../SubmodulosHotel/ParametrosFinanceiro.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
                 </div>
             </div>
 
-            <!-- Widget 3 -->
+            <!-- Tema 3 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Em Desenvolvimento...</h2>
+                    <h2 class="card-title">Configuração de Estoque</h2>
                 </div>
                 <div class="card-body">
-                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <p class="card-description">Neste Conteúdo, você verá sobre as configurações de estoque.</p>
                     <div class="card-footer">
-                        <a href="..//ModulosHotel/EmDesenvolvimento.html" class="access-button">
+                        <a href="../SubmodulosHotel/ConfiguracaoEstoque.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 4 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Editar Valor da Taxa de Serviço</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste Conteúdo, você verá sobre como editar os valores da taxa de serviço.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/EditarValorTxServico.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 5 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Ajustar Valor da Diária Automática</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Neste Conteúdo, você verá sobre ajustar o valor da diária Automática.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosHotel/AjustarValorDiariaAut.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
@@ -323,15 +354,16 @@
     const courseData = [
         {
             id: 1,
-            title: "Como confirmar que o hóspede Tomou Café da Manhã",
-            description: "Aprenda como marcar a confirmação do hóspede na Pensão.",
-            link: "../SubmodulosHotel/ComoMarcarPensão.html"
+            title: "Alterar senha de exclusão",
+            description: "Em breve você vai aprender algo top aqui.",
+            link: "../SubmodulosHotel/AlterarSenhaExclusão.html"
         },
+
         {
             id: 2,
-            title: "Em Desenvolvimento...",
+            title: "Parâmetros Financeiros",
             description: "Em breve você vai aprender algo top aqui.",
-            link: "../ModulosHotel/EmDesenvolvimento.html"
+            link: "../SubmodulosHotel/ParametrosFinanceiro.html"
         },
         {
             id: 3,
