--- a/SubmodulosBoasPraticas/ConduçãoAtendimento.html
+++ b/SubmodulosBoasPraticas/ConduçãoAtendimento.html
@@ -6,6 +6,7 @@
     <title>Treinamento de Atendimento ao Cliente</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" href="../logo.png" type="image/x-icon">
     <style>
         .nav-active {
             color: #1D4ED8;
