--- a/SubmodulosBoasPraticas/ConversasDificeis.html
+++ b/SubmodulosBoasPraticas/ConversasDificeis.html
@@ -6,6 +6,7 @@
     <title>Treinamento: Conversas Difíceis e Desescalonamento</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" href="../logo.png" type="image/x-icon">
     <!-- Chosen Palette: Warm Neutral (bg-gray-50/bg-white, text-gray-900, accent-red-700/blue-700) -->
     <!-- Structure: Replicates the previous 5-section structure, focusing on emotional intelligence and conflict resolution. -->
     <style>
