--- a/SubmodulosBoasPraticas/ProcessosPadronizações.html
+++ b/SubmodulosBoasPraticas/ProcessosPadronizações.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento: Processos de Tickets</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="../logo.png" type="image/x-icon">
     <style>
         .nav-active {
             color: #1D4ED8;
