--- a/SubmodulosHotel/CadastrarEvento.html
+++ b/SubmodulosHotel/CadastrarEvento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo de Eventos - Sistema Bitz Hotel</title>
+    <title>Módulo de Eventos</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -746,17 +746,31 @@
                 flex-direction: column;
             }
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Botão Voltar -->
+        <a href="../ModulosHotel/Eventos.html" class="back-button">← Voltar</a>
+
+
         <header>
             <div class="logo-container">
                 <div class="logo-icon">
                     <i class="fas fa-calendar-alt"></i>
                 </div>
                 <div>
-                    <h1>📘 Base de Estudos – Módulo de Eventos (Bitz Hotel)</h1>
+                    <h1>Cadastro de Eventos</h1>
                     <p class="subtitle">Gestão completa de espaços e eventos como reuniões, shows, conferências e palestras</p>
                 </div>
             </div>
