--- a/SubmodulosBoasPraticas/BoasPraticasEscritaChat.html
+++ b/SubmodulosBoasPraticas/BoasPraticasEscritaChat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento: Boas Práticas de Escrita no Chat</title>
+    <link rel="icon" href="../logo.png" type="image/x-icon">
     <style>
         :root {
             --primary-color: #2c3e50;
