--- a/SubmodulosHotel/EditarVendaAvulsa.html
+++ b/SubmodulosHotel/EditarVendaAvulsa.html
@@ -840,10 +840,22 @@
                 flex-direction: column;
             }
         }
+         .back-button {
+            display: inline-block;
+            background: #95a5a6;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 6px;
+            margin-bottom: 20px;
+            transition: background 0.3s ease;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Botão Voltar -->
+                <a href="../ModulosHotel/VendasAvulsas.html" class="back-button">← Voltar</a>
         <header>
             <div class="logo-container">
                 <div class="logo-icon">
