--- a/ModuloBoasPraticas/ConfiguraçõesGerais.html
+++ b/ModuloBoasPraticas/ConfiguraçõesGerais.html
@@ -330,7 +330,37 @@
                         </a>
                     </div>
                 </div>
-            </div>               
+            </div>   
+            
+            <!-- Tema 5 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Configurações de integração Stone</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosBoasPraticas/IntegraçãoStone.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tema 6 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title">Configurações de integração Rede</h2>
+                </div>
+                <div class="card-body">
+                    <p class="card-description">Em breve você vai aprender algo top aqui.</p>
+                    <div class="card-footer">
+                        <a href="../SubmodulosBoasPraticas/IntegraçãoRede.html" class="access-button">
+                           Clique Aqui
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
  </div>
