--- a/ModuloBoasPraticas/ProcessosPadronizacoes.html
+++ b/ModuloBoasPraticas/ProcessosPadronizacoes.html
@@ -144,12 +144,12 @@
             <!-- Widget 1 -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title">Processos de Tickets</h2>
+                    <h2 class="card-title">Padronização Movidesk</h2>
                 </div>
                 <div class="card-body">
                     <p class="card-description">Aprenda como padronizar seus tickts no Movidesk</p>
                     <div class="card-footer">
-                        <a href="../SubmodulosBoasPraticas/ProcessosPadronizações.html" class="access-button">
+                        <a href="../SubmodulosBoasPraticas/ProcessosTickets.html" class="access-button">
                             Clique Aqui
                         </a>
                     </div>
