--- a/ModuloBoasPraticas/QualidadeNoAtendimento.html
+++ b/ModuloBoasPraticas/QualidadeNoAtendimento.html
@@ -136,7 +136,7 @@
         <a href="../index.html" class="back-button">← Voltar</a>
 
         <header>
-            <h1>Técnicas Avançadas</h1>
+            <h1>Qualidade no Atendimento</h1>
             <p class="subtitle">Em breve você vai aprender algo top aqui.</p>
         </header>
         
@@ -179,7 +179,7 @@
                 <div class="card-body">
                     <p class="card-description">Em breve você vai aprender algo top aqui.</p>
                     <div class="card-footer">
-                        <a href="../SubmodulosHotel/EmDesenvolvimento.html" class="access-button">
+                        <a href="../ModulosHotel/EmDesenvolvimento.html" class="access-button">
                            Clique Aqui
                         </a>
                     </div>
