--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <h3 class="module-title">Técnicas Avançadas</h3>
                         <p class="module-description">Habilidades avançadas de atendimento</p>
                         <div class="module-status">
-                            <span class="status-development">Em Desenvolvimento</span>
+                            <span class="status-available">Disponível</span>
                         </div>
                     </a> 
 
