--- a/SubmodulosMotel/InstalaçãoImperium.html
+++ b/SubmodulosMotel/InstalaçãoImperium.html
@@ -430,7 +430,7 @@
 <body>
     <div class="container">
         <!-- Botão Voltar -->
-        <a href="../index.html" class="back-button">← Voltar</a>
+        <a href="../ModulosMotel/Configuracoes.html" class="back-button">← Voltar</a>
 
         <header>
             <div class="logo-container">
@@ -972,4 +972,5 @@
         });
     </script>
 </body>
+
 </html>
